--- a/src/CommonBundle/Resources/views/Default/rulesPDF.html.twig
+++ b/src/CommonBundle/Resources/views/Default/rulesPDF.html.twig
@@ -4,8 +4,7 @@
         <meta charset="UTF-8" />
     </head>
     <body>
-      {{ dump(absolute_url(asset('uploads/ef8872ef24a4a82b777d347adb9941f5.png'))) }}
-      <h1 class="text-center"> Règles du jeu  - {{ game.name }}</h1>
+      <h1 align="center"> Règles du jeu  - {{ game.name }}</h1>
       <div>
         {{ game.rules | raw }}
       </div>
