modifications Game et Copy

--- a/src/AdminBundle/Resources/views/admin-layout.html.twig
+++ b/src/AdminBundle/Resources/views/admin-layout.html.twig
@@ -44,7 +44,7 @@
                     <li><a href="{{ path('admin_country_index') }}">Pays</a></li>
                     <li><a href="{{ path('admin_players_index') }}">Nombre de joueurs</a></li>
                     <li><a href="{{ path('admin_congestion_index') }}">Encombrement du jeu</a></li>
-                    <li><a href="{{ path('admin_status_index') }}">Statut jeu</a></li>
+                    <li><a href="{{ path('admin_status_index') }}">État jeu</a></li>
                     <li><a href="{{ path('admin_localisation_index') }}">Emplacement</a></li>
                     <li><a href="{{ path('admin_paymentmethod_index') }}">Moyen de paiement</a></li>
                 </ul>
