--- a/src/AdminBundle/Resources/views/copy/edit.html.twig
+++ b/src/AdminBundle/Resources/views/copy/edit.html.twig
@@ -1,21 +1,21 @@
-{% extends "AdminBundle::admin-layout.html.twig" %}
+{% extends 'AdminBundle::admin-layout.html.twig' %}
 
 {% block content %}
-    <h1>Copy edit</h1>
+    <h1>Modification de l'exemplaire</h1>
 
     {{ form_start(edit_form) }}
+    <div class="row">
         {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
+    </div>
+    <div class="row">
+        <a href="{{ path('admin_show', {'id': copy.game.id}) }}"><button type="button" class="btn btn-primary">Retour à la liste des exemplaires</button></a>
+        <button type="submit" class="btn btn-success pull-right">Modifier</button>
+    </div>
     {{ form_end(edit_form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('admin_show', {'id': copy.game.id}) }}">Retour à la liste des exemplaires</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    <div class="row">
+        {{ form_start(delete_form) }}
+        <input type="submit" class="btn btn-danger pull-right" value="Supprimer">
+        {{ form_end(delete_form) }}
+    </div>
 {% endblock %}
