--- a/src/AdminBundle/Resources/views/copy/index.html.twig
+++ b/src/AdminBundle/Resources/views/copy/index.html.twig
@@ -20,8 +20,7 @@
         <tbody>
         {% for copy in copies %}
             <tr>
-                <td><a href="{{ path('admin_copy_show', { 'id': copy.id }) }}">{{ copy.id }}</a></td>
-                <td>{{ copy.reference }}</td>
+                <td><a href="{{ path('admin_copy_show', { 'id': copy.id }) }}">{{ copy.reference }}</a></td>
                 <td>
                     <a href="{{ path('admin_copy_show', { 'id': copy.id }) }}"><input type='button' class='btn btn-default' value='Voir'></a>
                     <a href="{{ path('admin_copy_edit', { 'id': copy.id }) }}"><input type='button' class='btn btn-default' value='Modifier'></a>
