--- a/src/AdminBundle/Resources/views/game/index.html.twig
+++ b/src/AdminBundle/Resources/views/game/index.html.twig
@@ -30,9 +30,9 @@
         <tr>
             <th data-field="image" data-formatter="imgFormatter" >Image</th>
             <th data-field="name">Nom</th>
-            <th data-field="duration">Durée</th>
-            <th data-field="age">Age</th>
-            <th data-field="rules">Règles</th>
+            <th data-field="duration" data-formatter="dureeFormatter">Durée</th>
+            <th data-field="explanationsDuration" data-formatter="explicationFormatter">Temps explication</th>
+            <th data-field="age">Age min</th>
             <th data-field="releaseDate">Date de sortie</th>
             <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents">Actions</th>
         </tr>
@@ -54,6 +54,41 @@
                 return [
                     '<img src="'+url+value+'" onerror="this.style.display=\'none\'"/>'
                 ].join('');
+        }
+        function dureeFormatter(value,row,index) {
+            if(value == 0){
+                return [
+                    'Courte <= 30mn'
+                ].join('');
+            } if(value == 1) {
+                return [
+                    'Moyenne 30-45mn'
+                ].join('');
+            }if(value == 2) {
+                return [
+                    'Longue ~1h'
+                ].join('');
+            }if(value == 3) {
+                return [
+                    'Très longue +1h'
+                ].join('');
+            }
+        }
+
+        function explicationFormatter(value,row,index) {
+            if(value == 0){
+                return [
+                    '<10 minutes'
+                ].join('');
+            } if(value == 1) {
+                return [
+                    '<20 minutes'
+                ].join('');
+            }if(value == 2) {
+                return [
+                    '>20 minutes'
+                ].join('');
+            }
         }
 
         function actionFormatter(value, row, index) {
