Borrow with data transformer (still not workink)

--- a/src/AdminBundle/Resources/views/admin-layout.html.twig
+++ b/src/AdminBundle/Resources/views/admin-layout.html.twig
@@ -77,6 +77,8 @@
                    '@AdminBundle/Resources/public/js/bootstrap-table-export.js'
                    '@AdminBundle/Resources/public/js/tableExport.js'
                    '@AdminBundle/Resources/public/js/bootstrap-table-fr-FR.min.js'
+                   '@AdminBundle/Resources/public/js/borrow.js'
+
     %}
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
