--- a/src/AdminBundle/Resources/views/borrow/show.html.twig
+++ b/src/AdminBundle/Resources/views/borrow/show.html.twig
@@ -8,11 +8,11 @@
         <table class="table table-responsive table-striped">
             <tr>
                 <th>Jeu empruntée</th>
-                <td>{{ borrow.copy.game.name }}</td>
+                <td>{#borrow.copy.game.name #}</td>
             </tr>
             <tr>
                 <th>Copie empruntée</th>
-                <td>{{ borrow.copy.reference }}</td>
+                <td>{# borrow.copy.reference #}</td>
             </tr>
             <tr>
                 <th>Emprunté par</th>
