Finalizing the nav public menu

--- a/src/CommonBundle/Resources/views/common-layout.html.twig
+++ b/src/CommonBundle/Resources/views/common-layout.html.twig
@@ -28,15 +28,17 @@
 
 		<nav id="nav-bar">
 			<ul>
-				<li class="nav-element"><a href="#">Qui sommes nous</a>
+
+				<li class="nav-element"><a href="#" class="nav-link">Qui sommes nous</a>
 					<ul class="first-ul">
-						<li><a href="#">Nos status</a></li>
+						<li><a class="first-sublink" href="#">Nos status</a></li>
 						<li><a href="#">Partenaires</a></li>
 					</ul>
 				</li>
-				<li class="nav-element"><a href="#">Nos propositions</a>
+
+				<li class="nav-element"><a href="#" class="nav-link">Nos propositions</a>
 					<ul class="first-ul">
-						<li><a href="#">Notre plaquette</a></li>
+						<li><a class="first-sublink" ref="#">Notre plaquette</a></li>
 						<li class="sousmenu-li"><a href="#">Nos jeux</a>
 							<ul class="second-ul">
 								<li><a href="#">Jeux Géants</a></li>
@@ -45,17 +47,19 @@
 							</ul>
 						</li>
 						<li><a href="#">Organisation de tournois</a></li>
-						<li><a href="#"></a>Organisation de rallye</li>
+						<li><a href="#">Organisation de rallye</a></li>
 					</ul>
 				</li>
-				<li class="nav-element"><a href="#">Nos prochaines animations</a>
+
+				<li class="nav-element"><a href="#" class="nav-link">Nos prochaines animations</a>
 					<ul class="first-ul">
-						<li><a href="#">Les soirées Strata'jm</a></li>
+						<li><a class="first-sublink" href="#">Les soirées Strata'jm</a></li>
 					</ul>
 				</li>
-				<li class="nav-element"><a href="#">Nos dernières animations</a>
+
+				<li class="nav-element"><a href="#" class="nav-link">Nos dernières animations</a>
 					<ul class="first-ul">
-						<li><a href="#">Tournoi inter-quartier 2015</a></li>
+						<li><a class="first-sublink" href="#">Tournoi inter-quartier 2015</a></li>
 						<li><a href="#">Prévention SIDA-Chelles</a></li>
 						<li class="sousmenu-li"><a href="#">Jeux GRIAL</a>
 							<ul class="second-ul">
@@ -63,10 +67,10 @@
 							</ul>
 						</li>
 						<li><a href="#">Fête du jeux de Thoiry (78)</a></li>
-						<li><a href="#"></a>Colombes Eco-Tour</li>
+						<li><a href="#">Colombes Eco-Tour</a></li>
 					</ul>
 				</li>
-				<li class="nav-element"><a href="#">Contact</a></li>
+				<li class="nav-element"><a href="#" class="nav-link">Contact</a></li>
 			</ul>
 		</nav>
 
