--- a/src/CommonBundle/Resources/public/css/common-theme.css
+++ b/src/CommonBundle/Resources/public/css/common-theme.css
@@ -6,17 +6,13 @@ a:hover, a:active, a:visited, a:focus{
 }
 
 
-
-
-
-
-
 body {
   background-color: #e8d8c9;
   width: 920px;
   height: 100%;
   margin: auto;
 }
+
 /* HEADER AND NAV */
 header {
 }
@@ -45,6 +41,11 @@ header {
   height: 100%;
 }
 
+.nav-link {
+  justify-content: center;
+
+}
+
 .nav-element a {
   text-decoration: none;
   color: #FFFFFF;
@@ -52,7 +53,7 @@ header {
   align-items: center;
   display: flex;
   cursor: pointer;
-  justify-content: center;
+  width:180px;
 }
 
 .nav-element:hover {
@@ -68,33 +69,59 @@ header {
 }
 #nav-bar>ul{
   height: 100%;
-  width: 90%;
+  /*width: 90%;*/
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding: 0;
   margin: 0 auto;
 }
+
 .nav-element{
   flex-grow: 1;
+  z-index:3;
 }
+
 .first-ul, .second-ul{
   display: none;
 }
+
+.first-ul>li>a {
+}
+
 .nav-element:hover .first-ul, .sousmenu-li:hover .second-ul{   /* au hover du 1er li, on affiche le 1er sous menu ul*/
-  display: flex;
+  display: inline;
   flex-direction: column;
-  background-color: red;
+  background-color: #9B6559;
   position: relative;
-  z-index: 10;
 }
 #nav-bar>ul>li>ul>li{
   list-style-type: none;
-  background-color: blue;
+  background-color: #9B6559;
+  margin: 1px;
+  /*width: 230px;*/
+
 }
+
+#nav-bar>ul>li>ul>li a{
+  text-align: left;
+  text-indent: 12px;
+  text-decoration: none;
+  line-height: 30px;
+  color: #FEE1D2;
+  font-size: 12px;
+}
+
+
 #nav-bar>ul>li>ul>li>ul>li{
   list-style-type: none;
 }
+
+.first-sublink {
+  margin-top:-20px;
+  z-index:3;
+}
+
 .sousmenu-li{
   position: relative;
 }
@@ -103,7 +130,7 @@ header {
   position: absolute!important;
   width: 150px;
   right: -150px;
-  top: -20px;
+  top: 0px;
 }
 
 
