--- a/src/CommonBundle/Resources/public/css/common-theme.css
+++ b/src/CommonBundle/Resources/public/css/common-theme.css
@@ -112,6 +112,10 @@ header {
   font-size: 12px;
 }
 
+#nav-bar>ul>li>ul>li:hover, #nav-bar>ul>li>ul>li>a:hover{
+  background-color: #4E3731;
+  color:white;
+}
 
 #nav-bar>ul>li>ul>li>ul>li{
   list-style-type: none;
@@ -125,14 +129,23 @@ header {
 .sousmenu-li{
   position: relative;
 }
+
 .second-ul{
   flex-direction: row;
   position: absolute!important;
-  width: 150px;
-  right: -150px;
+  width: 230px;
+  right: -231px;
   top: 0px;
 }
 
+.second-ul>li>a {
+    margin-left: -40px;
+}
+
+.second-ul>li:hover, .second-ul>li>a:hover {
+  background-color: #4E3731;
+  color:white;
+}
 
 
 /* END HEADER AND NAV */
