--- a/src/CommonBundle/Resources/views/common-layout.html.twig
+++ b/src/CommonBundle/Resources/views/common-layout.html.twig
@@ -29,45 +29,45 @@
 		<nav id="nav-bar">
 			<ul>
 
-				<li class="nav-element"><a href="#" class="nav-link">Qui sommes nous</a>
+				<li class="nav-element"><a href="http://stratajm-idf.fr" class="nav-link">Qui sommes nous</a>
 					<ul class="first-ul">
-						<li><a class="first-sublink" href="#">Nos status</a></li>
-						<li><a href="#">Partenaires</a></li>
+						<li><a class="first-sublink" href="http://stratajm-idf.fr/?page_id=66">Nos status</a></li>
+						<li><a href="http://stratajm-idf.fr/?page_id=70">Partenaires</a></li>
 					</ul>
 				</li>
 
 				<li class="nav-element"><a href="#" class="nav-link">Nos propositions</a>
 					<ul class="first-ul">
-						<li><a class="first-sublink" ref="#">Notre plaquette</a></li>
-						<li class="sousmenu-li"><a href="#">Nos jeux</a>
+						<li><a class="first-sublink" href="http://stratajm-idf.fr/?page_id=34">Notre plaquette</a></li>
+						<li class="sousmenu-li"><a href="http://stratajm-idf.fr/?page_id=333">Nos jeux</a>
 							<ul class="second-ul">
-								<li><a href="#">Jeux Géants</a></li>
-								<li><a href="#">Jeux traditionnels</a></li>
-								<li><a href="#">jeux de société</a></li>
+								<li><a href="http://stratajm-idf.fr/?page_id=19">Jeux géants</a></li>
+								<li><a href="http://stratajm-idf.fr/?page_id=25">Jeux traditionnels</a></li>
+								<li><a href="http://stratajm-idf.fr/?page_id=29">Jeux de société</a></li>
 							</ul>
 						</li>
-						<li><a href="#">Organisation de tournois</a></li>
-						<li><a href="#">Organisation de rallye</a></li>
+						<li><a href="http://stratajm-idf.fr/?page_id=31">Organisation de tournois</a></li>
+						<li><a href="http://stratajm-idf.fr/?page_id=39">Organisation de rallye</a></li>
 					</ul>
 				</li>
 
-				<li class="nav-element"><a href="#" class="nav-link">Nos prochaines animations</a>
+				<li class="nav-element"><a href="http://stratajm-idf.fr/?page_id=385" class="nav-link">Nos prochaines animations</a>
 					<ul class="first-ul">
-						<li><a class="first-sublink" href="#">Les soirées Strata'jm</a></li>
+						<li><a class="first-sublink" href="http://stratajm-idf.fr/?page_id=571">Les soirées Strata'j'm</a></li>
 					</ul>
 				</li>
 
 				<li class="nav-element"><a href="#" class="nav-link">Nos dernières animations</a>
 					<ul class="first-ul">
-						<li><a class="first-sublink" href="#">Tournoi inter-quartier 2015</a></li>
-						<li><a href="#">Prévention SIDA-Chelles</a></li>
-						<li class="sousmenu-li"><a href="#">Jeux GRIAL</a>
+						<li><a class="first-sublink" href="http://stratajm-idf.fr/?page_id=1046">Tournoi inter-quartier 2015</a></li>
+						<li><a href="http://stratajm-idf.fr/?page_id=371">Prévention SIDA-Chelles</a></li>
+						<li class="sousmenu-li"><a href="http://stratajm-idf.fr/?page_id=400">Jeux GRIAL</a>
 							<ul class="second-ul">
-								<li><a href="#">Décembre</a></li>
+								<li><a href="http://stratajm-idf.fr/?page_id=405">Décembre</a></li>
 							</ul>
 						</li>
-						<li><a href="#">Fête du jeux de Thoiry (78)</a></li>
-						<li><a href="#">Colombes Eco-Tour</a></li>
+						<li><a href="http://stratajm-idf.fr/?page_id=323">Fête du jeux de Thoiry (78)</a></li>
+						<li><a href="http://stratajm-idf.fr/?page_id=119">Colombes Eco-Tour</a></li>
 					</ul>
 				</li>
 				<li class="nav-element"><a href="#" class="nav-link">Contact</a></li>
