--- a/src/AdminBundle/Resources/views/borrow/show.html.twig
+++ b/src/AdminBundle/Resources/views/borrow/show.html.twig
@@ -6,13 +6,14 @@
     </div>
     <div class="row col-sm-offset-3 col-sm-6 col-lg-offset-3 col-lg-6 show">
         <table class="table table-responsive table-striped">
+
             <tr>
                 <th>Jeu empruntée</th>
-                <td>{#borrow.copy.game.name #}</td>
+                <td>{{ borrow.copy.game.name  }}</td>
             </tr>
             <tr>
                 <th>Copie empruntée</th>
-                <td>{# borrow.copy.reference #}</td>
+                <td>{{  borrow.copy.reference  }}</td>
             </tr>
             <tr>
                 <th>Emprunté par</th>
@@ -21,10 +22,6 @@
             <tr>
                 <th>Date de début</th>
                 <td>{{ borrow.beginDate|date('d/m/Y') }}</td>
-            </tr>
-            <tr>
-                <th>Date de fin</th>
-                <td>{{ borrow.endDate|date('d/m/Y') }}</td>
             </tr>
         </table>
     </div>
