--- a/src/AdminBundle/Resources/views/borrow/new.html.twig
+++ b/src/AdminBundle/Resources/views/borrow/new.html.twig
@@ -4,8 +4,38 @@
     <h1>Déclarer un emprunt</h1>
 
     {{ form_start(form) }}
+    {% if error is defined %}
+        {{ error }}
+    {% endif %}
         {{ form_widget(form) }}
         <a href="{{ path('admin_borrow_index') }}"><button type="button" class="btn btn-primary">Retour à la liste</button></a>
         <button type="submit" class="btn btn-success pull-right">Créer</button>
     {{ form_end(form) }}
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    {{ tinymce_init() }}
+    <script>
+        $( function() {
+            $( "#borrow_beginDate" ).datepicker(
+                    {
+                        yearRange: '2000:2050',
+                        changeMonth: true,
+                        changeYear: true,
+                        altField: "#datepicker",
+                        closeText: 'Fermer',
+                        prevText: 'Précédent',
+                        nextText: 'Suivant',
+                        currentText: 'Aujourd\'hui',
+                        monthNames: ['Janvier', 'Février', 'Mars', 'Avril', 'Mai', 'Juin', 'Juillet', 'Août', 'Septembre', 'Octobre', 'Novembre', 'Décembre'],
+                        monthNamesShort: ['Janv.', 'Févr.', 'Mars', 'Avril', 'Mai', 'Juin', 'Juil.', 'Août', 'Sept.', 'Oct.', 'Nov.', 'Déc.'],
+                        dayNames: ['Dimanche', 'Lundi', 'Mardi', 'Mercredi', 'Jeudi', 'Vendredi', 'Samedi'],
+                        dayNamesShort: ['Dim.', 'Lun.', 'Mar.', 'Mer.', 'Jeu.', 'Ven.', 'Sam.'],
+                        dayNamesMin: ['D', 'L', 'M', 'M', 'J', 'V', 'S'],
+                        weekHeader: 'Sem.',
+                        dateFormat: 'yyyy-mm-dd',
+                    }
+            );
+        } );
+    </script>
 {% endblock %}
