problem datFormat borrow

--- a/src/AdminBundle/Resources/views/borrow/new.html.twig
+++ b/src/AdminBundle/Resources/views/borrow/new.html.twig
@@ -33,7 +33,7 @@
                         dayNamesShort: ['Dim.', 'Lun.', 'Mar.', 'Mer.', 'Jeu.', 'Ven.', 'Sam.'],
                         dayNamesMin: ['D', 'L', 'M', 'M', 'J', 'V', 'S'],
                         weekHeader: 'Sem.',
-                        dateFormat: 'yyyy-mm-dd',
+                        dateFormat: 'yy-mm-dd',
                     }
             );
         } );
