--- a/src/AdminBundle/Resources/views/congestion/index.html.twig
+++ b/src/AdminBundle/Resources/views/congestion/index.html.twig
@@ -6,7 +6,7 @@
             <h1>Types d'emcombrement</h1>
         </div>
         <div class="row">
-            <a href="{{ path('admin_congestion_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Créer un nouveau type d'emcombrement</button></a>
+            <a href="{{ path('admin_congestion_new') }}"><button class="btn btn-primary pull-right"><span class="glyphicon glyphicon-plus"></span> Créer un nouveau type d'encombrement</button></a>
         </div>
     </div>
 
